# jane/Client.php
@@ -4,6 +4,22 @@ namespace Heptacom\DigiStore24;
 
 class Client extends \Jane\OpenApiRuntime\Client\Psr18Client
 {
+    /**
+     * @param array $queryParameters {
+     *
+     *     @var string $operator
+     *     @var string $language de, en
+     * }
+     *
+     * @param string $fetch Fetch mode to use (can be OBJECT or RESPONSE)
+     *
+     * @return \Heptacom\DigiStore24\Model\ListProductGroupsResponse|\Heptacom\DigiStore24\Model\ErrorResponse|\Psr\Http\Message\ResponseInterface|null
+     */
+    public function listProductGroups(string $apiToken, array $queryParameters = [], string $fetch = self::FETCH_OBJECT)
+    {
+        return $this->executePsr7Endpoint(new \Heptacom\DigiStore24\Endpoint\ListProductGroups($apiToken, $queryParameters), $fetch);
+    }
+
     public static function create($httpClient = null)
     {
         if ($httpClient === null) {
