# jane/Model/ErrorResponse.php
@@ -1,0 +1,125 @@
+<?php declare(strict_types=1);
+
+namespace Heptacom\DigiStore24\Model;
+
+class ErrorResponse
+{
+    /**
+     * @var string
+     */
+    protected $apiVersion;
+
+    /**
+     * @var string
+     */
+    protected $currentTime;
+
+    /**
+     * @var string
+     */
+    protected $timezone;
+
+    /**
+     * @var string
+     */
+    protected $utcOffset;
+
+    /**
+     * @var string
+     */
+    protected $result = 'error';
+
+    /**
+     * @var string
+     */
+    protected $message;
+
+    /**
+     * @var int
+     */
+    protected $code;
+
+    public function getApiVersion(): string
+    {
+        return $this->apiVersion;
+    }
+
+    public function setApiVersion(string $apiVersion): self
+    {
+        $this->apiVersion = $apiVersion;
+
+        return $this;
+    }
+
+    public function getCurrentTime(): string
+    {
+        return $this->currentTime;
+    }
+
+    public function setCurrentTime(string $currentTime): self
+    {
+        $this->currentTime = $currentTime;
+
+        return $this;
+    }
+
+    public function getTimezone(): string
+    {
+        return $this->timezone;
+    }
+
+    public function setTimezone(string $timezone): self
+    {
+        $this->timezone = $timezone;
+
+        return $this;
+    }
+
+    public function getUtcOffset(): string
+    {
+        return $this->utcOffset;
+    }
+
+    public function setUtcOffset(string $utcOffset): self
+    {
+        $this->utcOffset = $utcOffset;
+
+        return $this;
+    }
+
+    public function getResult(): string
+    {
+        return $this->result;
+    }
+
+    public function setResult(string $result): self
+    {
+        $this->result = $result;
+
+        return $this;
+    }
+
+    public function getMessage(): string
+    {
+        return $this->message;
+    }
+
+    public function setMessage(string $message): self
+    {
+        $this->message = $message;
+
+        return $this;
+    }
+
+    public function getCode(): int
+    {
+        return $this->code;
+    }
+
+    public function setCode(int $code): self
+    {
+        $this->code = $code;
+
+        return $this;
+    }
+}
