# openapi.yaml
@@ -1,7 +1,116 @@
 openapi: 3.0.0
 info:
-    version: 1.0.0
+    version: 1.1.0
     title: DigiStore24
 servers:
     - url: https://www.digistore24.com/api/call
-paths: {}
+paths:
+    /{apiToken}/json/listProductGroups:
+        get:
+            operationId: listProductGroups
+            externalDocs:
+                url: https://docs.digistore24.com/knowledge-base/listproductgroups/
+            parameters:
+                -   $ref: '#/components/parameters/apiToken'
+                -   $ref: '#/components/parameters/operator'
+                -   $ref: '#/components/parameters/language'
+            responses:
+                200:
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/listProductGroupsResponse'
+                4XX:
+                    description: 'Client error'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/errorResponse'
+                5XX:
+                    description: 'Server error'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/errorResponse'
+
+components:
+    schemas:
+        errorResponse:
+            type: object
+            properties:
+                api_version:
+                    type: string
+                    nullable: false
+                current_time:
+                    type: string
+                    nullable: false
+                timezone:
+                    type: string
+                    nullable: false
+                utc_offset:
+                    type: string
+                    nullable: false
+                result:
+                    type: string
+                    default: error
+                    nullable: false
+                message:
+                    type: string
+                    nullable: false
+                code:
+                    type: integer
+                    nullable: false
+        listProductGroups:
+            type: object
+            # todo fill
+        listProductGroupsResponse:
+            type: object
+            properties:
+                api_version:
+                    type: string
+                    nullable: false
+                current_time:
+                    type: string
+                    nullable: false
+                timezone:
+                    type: string
+                    nullable: false
+                utc_offset:
+                    type: string
+                    nullable: false
+                result:
+                    type: string
+                    nullable: false
+                    default: success
+                data:
+                    type: object
+                    nullable: false
+                    properties:
+                        items:
+                            type: array
+                            items:
+                                $ref: '#/components/schemas/listProductGroups'
+    parameters:
+        apiToken:
+            name: apiToken
+            in: path
+            required: true
+            schema:
+                type: string
+        operator:
+            name: operator
+            in: query
+            required: false
+            schema:
+                type: string
+        language:
+            description: 'de, en'
+            name: language
+            in: query
+            required: false
+            schema:
+                type: string
+                enum:
+                    - de
+                    - en
